Ensured text wrapping around floated img Moved img element to top of p elements Took float off p elements Img is the only floated element

--- a/about-page/css/style.css
+++ b/about-page/css/style.css
@@ -5,7 +5,6 @@
 html {
     margin: 10px;
     padding: 10px;
-    width: auto;
 }
 
 body {
@@ -21,14 +20,7 @@ a {
     color: #47ce98;
 }
 
-.container {
-    width: auto;
-    border: 1px solid black;
-}
-
 section {
-    float: left;
-    width: 63%;
     margin: 0 1.5%;
     font-size: 24px;
     border: 1px solid black;
@@ -90,6 +82,7 @@ p {
     font-family: serif;
     border: 1px solid black;
 }
+
 
 
 
